# bioinf

./: .gitignore  CMakeLists.txt  CNAME  RBNode.cpp  RBNode.h  RBTree.cpp  RBTree.h  README.md  Vagrantfile  balanced_node.cpp  balanced_node.h  balanced_tree.cpp  balanced_tree.h  bitmask.cpp  bitmask.h  bitmask_bitset.cpp  bitmask_bitset.h  bitmask_vector.cpp  bitmask_vector.h  bitset.cpp  bitset.h  data.cpp  data.h  lookup_list.cpp  lookup_list.h  main.cpp  rank_select.h  rb_node.cpp  rb_node.h  rb_tree.cpp  rb_tree.h  test.cpp  test.h  tree.cpp  tree.h  very_good_tree.cpp  very_good_tree.h  wave.h  wave_node_simple.cpp  wave_node_simple.h  (+4 more)
commands/: commands100.txt
example/: cmds_1000_1000.txt  example_1000.fa
measures/: bacterias.txt  examples.txt
measures/O3_flag/linux/: examples.txt
measures/linux/: bacterias.txt
measures/macos/: bacterias.txt  examples.txt
measures/new_flags/linux/: bacterias.txt  examples.txt
measures/new_flags/macos/: bacterias.txt  examples.txt
scripts/: README.md  compile.sh  dl_bacteria.sh  gen_all.sh  gen_cmd.sh  gen_cmds.sh  gen_synth.sh  measure.sh  measure_create_time.sh  measure_run_time.sh  vagrant_provision.sh
src/: bitmask.cpp  bitmask.h  bitmask_vector.cpp  data.cpp  lookup_list.cpp  lookup_list.h  main.cpp  rb_node.h  rb_tree.cpp  rb_tree.h  test.h
